# stereo_calibration

./: .gitignore  CMakeLists.txt  README.md
data/: stereo_param_config.json
examples/: CMakeLists.txt  MonocularCameraIntrinsicCalibration.cpp  MonocularCameraIntrinsicCalibrationHandler.cpp  MonocularCameraIntrinsicCalibrationHandler.hpp  StereoRectificationApp.cpp
include/stereo_rectification/: FundamentalMatrix.hpp  StereoCalibrationHandler.hpp  StereoRectification.hpp  Types.hpp  stereo_rectification.hpp
include/stereo_rectification/utils/: ParamConfig.hpp  utils.hpp
src/: CMakeLists.txt  FundamentalMatrix.cpp  ProjectiveTransform.cpp  ShearingTransform.cpp  StereoCalibrationHandler.cpp  StereoRectification.cpp  TransformEstimation.hpp
src/utils/: ParamConfig.cpp
